--- a/spa.html
+++ b/spa.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>SPA Starter</title>
+    <title>SPA Starter　Test</title>
     <link rel="stylesheet" href="css/spa.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
     
